Partway through large refactor of how components and items work. Non-compilable at the moment, but backing up.