@@ -4,15 +4,12 @@ import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableList.Builder;
 import org.checkerframework.checker.nullness.qual.Nullable;
 import records.error.InternalException;
-import records.gui.stf.StructuredTextField.Component;
 import records.gui.stf.StructuredTextField.ErrorFix;
-import records.gui.stf.StructuredTextField.Item;
 import records.gui.stf.StructuredTextField.Suggestion;
 import threadchecker.OnThread;
 import threadchecker.Tag;
 import utility.Either;
 import utility.FXPlatformFunctionInt;
-import utility.Pair;
 import utility.Utility;
 
 import java.util.ArrayList;
@@ -24,23 +21,18 @@ import java.util.function.Function;
  * Created by neil on 28/06/2017.
  */
 @OnThread(Tag.FXPlatform)
-public class ComponentList<R, T> extends Component<R>
+public class ComponentList<R, T> extends ParentComponent<R>
 {
-    private final ImmutableList<Component<? extends T>> components;
+    private final ImmutableList<Component<? extends T>> contentComponents;
     private final Function<List<T>, R> combine;
-    private final String divider;
-    private final @Nullable String prefix;
-    private final @Nullable String suffix;
-    private List<Pair<Integer, Integer>> subLists = new ArrayList<>();
+    private final ImmutableList<Component<?>> allComponents;
 
     public ComponentList(ImmutableList<Component<?>> parents, @Nullable String prefix, List<Function<ImmutableList<Component<?>>, Component<? extends T>>> components, String divider, @Nullable String suffix, Function<List<T>, R> combine)
     {
         super(parents);
-        this.components = ImmutableList.copyOf(Utility.<Function<ImmutableList<Component<?>>, Component<? extends T>>, Component<? extends T>>mapList(components, f -> f.apply(getItemParents())));
-        this.divider = divider;
+        this.contentComponents = ImmutableList.copyOf(Utility.<Function<ImmutableList<Component<?>>, Component<? extends T>>, Component<? extends T>>mapList(components, f -> f.apply(getItemParents())));
         this.combine = combine;
-        this.prefix = prefix;
-        this.suffix = suffix;
+        this.allComponents = makeAllComponents(getItemParents(), prefix, contentComponents, divider, suffix);
     }
 
     // Same as above but allows throwing an internal exception, and re-orders parameters to avoid having same erasure
@@ -52,40 +44,41 @@ public class ComponentList<R, T> extends Component<R>
         {
             componentBuilder.add(f.apply(getItemParents()));
         }
-        this.components = componentBuilder.build();
-        this.divider = divider;
+        this.contentComponents = componentBuilder.build();
         this.combine = combine;
-        this.prefix = prefix;
-        this.suffix = suffix;
+        this.allComponents = makeAllComponents(getItemParents(), prefix, contentComponents, divider, suffix);
     }
 
     @Override
-    public List<Item> getInitialItems()
+    protected List<Component<?>> getChildComponents()
     {
-        List<Item> r = new ArrayList<>();
+        return allComponents;
+    }
+
+    private static <T> ImmutableList<Component<?>> makeAllComponents(ImmutableList<Component<?>> itemParents, String prefix, ImmutableList<Component<? extends T>> content, String divider, String suffix)
+    {
+        Builder<Component<?>> build = ImmutableList.builder();
         if (prefix != null)
-            r.add(new Item(getItemParents(), prefix));
-        for (int i = 0; i < components.size(); i++)
+            build.add(new DividerComponent(itemParents, prefix));
+        for (int i = 0; i < content.size(); i++)
         {
-            List<Item> items = components.get(i).getInitialItems();
-            subLists.add(new Pair<>(r.size(), r.size() + items.size()));
-            r.addAll(items);
-            if (i < components.size() - 1)
-                r.add(new Item(getItemParents(), divider));
+            build.add(content.get(i));
+            if (i < content.size() - 1)
+                build.add(new DividerComponent(itemParents, divider));
         }
         if (suffix != null)
-            r.add(new Item(getItemParents(), suffix));
-        return r;
+            build.add(new DividerComponent(itemParents, suffix));
+        return build.build();
     }
 
     @Override
-    public Either<List<ErrorFix>, R> endEdit(StructuredTextField<?> field, List<Item> endResult)
+    public Either<List<ErrorFix>, R> endEdit(StructuredTextField<?> field)
     {
         // This is a bit iffy as it threads a mutable array list through the
         // immutable-looking Either instances, but it is safe:
-        Either<List<ErrorFix>, ArrayList<T>> result = components.get(0).endEdit(field, endResult.subList(subLists.get(0).getFirst(), subLists.get(0).getSecond())).map(x -> new ArrayList<>(Collections.singletonList(x)));
-        for (int i = 1; i < components.size(); i++)
-            result = Either.combineConcatError(result, components.get(i).endEdit(field, endResult.subList(subLists.get(i).getFirst(), subLists.get(i).getSecond())), (a, x) -> {a.add(x); return a;});
+        Either<List<ErrorFix>, ArrayList<T>> result = contentComponents.get(0).endEdit(field).map(x -> new ArrayList<>(Collections.singletonList(x)));
+        for (int i = 1; i < contentComponents.size(); i++)
+            result = Either.combineConcatError(result, contentComponents.get(i).endEdit(field), (a, x) -> {a.add(x); return a;});
         return result.map(combine);
     }
 
@@ -93,10 +86,13 @@ public class ComponentList<R, T> extends Component<R>
     public List<Suggestion> getSuggestions()
     {
         List<Suggestion> r = new ArrayList<>();
-        for (int i = 0; i < components.size(); i++)
+        int offset = 0;
+        for (int i = 0; i < allComponents.size(); i++)
         {
-            int offset = subLists.get(i).getFirst();
-            r.addAll(Utility.mapList(components.get(i).getSuggestions(), s -> s.offsetBy(offset)));
+            Component<?> component = allComponents.get(i);
+            int offsetFinal = offset;
+            r.addAll(Utility.mapList(component.getSuggestions(), s -> s.offsetBy(offsetFinal)));
+            offset += component.getItems().size();
         }
         return r;
     }
@@ -104,6 +100,6 @@ public class ComponentList<R, T> extends Component<R>
     @Override
     public boolean hasOuterBrackets()
     {
-        return prefix != null && prefix.equals("(");
+        return !allComponents.isEmpty() && allComponents.get(0).hasOuterBrackets();
     }
 }
